# ironhide

./: .eslintrc.js  .gitignore  .travis.yml  CHANGELOG.md  COPYRIGHT  Cargo.toml  PKGBUILD  README.md  RELEASING.md  flake.nix  oclif.manifest.json  package.json  tsconfig.json  tslint.json
.cargo/: config.toml
.github/workflows/: build.yaml  ci.yml  release.yaml
coverage/: index.html  index.ts.html
coverage/src/: index.html  index.ts.html
coverage/src/commands/group/: addadmin.ts.html  create.ts.html  delete.ts.html  index.html  info.ts.html  list.ts.html  removeadmin.ts.html  removemember.ts.html  rename.ts.html
coverage/src/commands/user/: changepassphrase.ts.html  devicedelete.ts.html  devicelist.ts.html  index.html  lookup.ts.html
coverage/src/hooks/: checkArgumentSize.ts.html  index.html  initializeSDK.ts.html
coverage/src/lib/: GroupMaps.ts.html  SDK.ts.html  Utils.ts.html  authenticate.ts.html  index.html  sharedFlags.ts.html
src/: auth.rs  group_maps.rs  index.ts  logout.rs  main.rs  util.rs
src/commands/: login.ts  logout.ts
src/commands/file/: decrypt.ts  encrypt.ts  grant.ts  info.ts  revoke.ts
src/commands/group/: addadmin.ts  addmember.ts  create.ts  delete.ts  info.ts  list.ts  removeadmin.ts  removemember.ts  rename.ts
src/commands/user/: changepassphrase.ts  devicedelete.ts  devicelist.ts  lookup.ts
src/file/: decrypt.rs  encrypt.rs  grant.rs  info.rs  mod.rs  revoke.rs
src/group/: add_admin.rs  add_member.rs  create.rs  delete.rs  info.rs  list.rs  mod.rs  remove_admin.rs  remove_member.rs  rename.rs
src/hooks/: checkArgumentSize.ts  initializeSDK.ts
src/lib/: GroupMaps.ts  Logger.ts  SDK.ts  Utils.ts  authenticate.ts  messages.ts  sharedFlags.ts
src/user/: change_passphrase.rs  device_delete.rs  device_list.rs  lookup.rs  mod.rs
test/commands/: hookBypass.ts
test/commands/group/: addadmin.test.ts  create.test.ts  delete.test.ts  info.test.ts  list.test.ts  removeadmin.test.ts  removeadmins.test.ts  removemember.test.ts  rename.test.ts
test/commands/user/: changepassphrase.test.ts  devicedelete.test.ts  devicelist.test.ts  lookup.test.ts
test/hooks/: checkArgumentSize.test.ts  initializeSDK.test.ts
test/lib/: GroupMaps.test.ts  Logger.test.ts  SDK.test.ts  Utils.test.ts  authenticate.test.ts  sharedFlags.test.ts
