[package]
name = "ironhide"
version = "1.0.0"
authors = [ "IronCore Labs <info@ironcorelabs.com>" ]
categories = [ "cryptography" ]
description = "Tool to easily encrypt and decrypt files to users and groups. Similar to GPG, but usable at scale."
documentation = "https://docs.rs/ironhide"
edition = "2021"
homepage = "https://github.com/ironcorelabs/ironhide"
include = [
    ".cargo",
    "**/*.rs",
    "./Cargo.toml",
]
keywords = [
    "cryptography",
    "proxy-re-encryption",
    "PRE",
    "ECC",
    "transform-encryption",
    "secrets",
    "encryption"
]
license = "AGPL-3.0-only"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/IronCoreLabs/ironhide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "~0.23.1", features = ["form", "json", "tls-rustls", "compress"], default-features = false }
atty = "~0.2.14"
base64 = "~0.13"
clap = { version = "~3.1.8", features = ["derive", "suggestions"] }
derive_more = "~0.99.6"
dirs = "~4.0"
ironoxide = { version = "~2", features = [
    "blocking",
    "tls-rustls",
], default-features = false }
keyring = "~1.2.0"
prettytable-rs = "~0.9"
promptly = "~0.3"
fancy-regex = "~0.10"
rpassword = "~7.1"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
textwrap = { version = "~0.16", features = ["terminal_size"] }
yansi = "~0.5"

# these need to stay/be upated to ironoxide's versions
itertools = "0.10"
time = { version = "0.3.6", features = ["local-offset", "formatting", "alloc"] }
