[package]
name = "ironhide"
version = "1.0.7"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
categories = ["cryptography"]
description = "Tool to easily encrypt and decrypt files to users and groups. Similar to GPG, but usable at scale."
documentation = "https://docs.rs/ironhide"
edition = "2021"
homepage = "https://github.com/ironcorelabs/ironhide"
include = [".cargo/config.toml", "**/*.rs", "./Cargo.toml"]
keywords = [
    "cryptography",
    "proxy-re-encryption",
    "transform-encryption",
    "secrets",
    "encryption",
]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/IronCoreLabs/ironhide"

[dependencies]
attohttpc = { version = "0.24", features = [
    "form",
    "json",
    "tls-rustls",
    "compress",
], default-features = false }
atty = "0.2.14"
base64 = "0.20"
clap = { version = "3", features = ["cargo", "derive", "suggestions"] }
derive_more = "0.99.6"
dirs = "4.0"
fancy-regex = "0.10"
ironoxide = { version = "2", features = [
    "blocking",
    "tls-rustls",
], default-features = false }
# this needs to stay/be updated to ironoxide's version
itertools = "0.10"
keyring = "1.2.0"
lazy_static = "1"
once_cell = "1.19"
prettytable-rs = "0.10"
promptly = "0.3"
rpassword = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = { version = "0.16", features = ["terminal_size"] }
# this needs to stay/be updated to ironoxide's version
time = "0.3.6"
tz-rs = { version = "0.6.14", default-features = false }
tzdb = { version = "0.5.0", default-features = false }
yansi = "0.5"
