[package]
name = "ironhide"
version = "1.1.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
categories = ["cryptography"]
description = "Tool to easily encrypt and decrypt files to users and groups. Similar to GPG, but usable at scale."
documentation = "https://docs.rs/ironhide"
edition = "2024"
homepage = "https://github.com/ironcorelabs/ironhide"
include = [".cargo/config.toml", "**/*.rs", "./Cargo.toml"]
keywords = [
    "cryptography",
    "proxy-re-encryption",
    "transform-encryption",
    "secrets",
    "encryption",
]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/IronCoreLabs/ironhide"

[dependencies]
attohttpc = { version = "0.28", features = [
    "form",
    "json",
    "tls-rustls",
    "compress",
], default-features = false }
atty = "0.2.14"
base64 = "0.22"
clap = { version = "4", features = ["cargo", "derive", "suggestions"] }
derive_more = { version = "2", features = ["display", "error"] }
dirs = "6.0"
fancy-regex = "0.14"
ironoxide = { version = "4", features = [
    "blocking",
    "tls-rustls",
], default-features = false }
itertools = "0.14"
keyring = "3"
lazy_static = "1"
once_cell = "1.19"
prettytable-rs = "0.10"
promptly = "0.3"
rpassword = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = { version = "0.16", features = ["terminal_size"] }
# this needs to stay/be updated to ironoxide's version
time = "0.3.47"
tz-rs = { version = "0.7", default-features = false }
tzdb = { version = "0.7", default-features = false, features = ["local"] }
yansi = "0.5"
